; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_lpc32xx_udc.c_uda_enable_hwepint.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_lpc32xx_udc.c_uda_enable_hwepint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpc32xx_udc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lpc32xx_udc*, i32)* @uda_enable_hwepint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uda_enable_hwepint(%struct.lpc32xx_udc* %0, i32 %1) #0 {
  %3 = alloca %struct.lpc32xx_udc*, align 8
  %4 = alloca i32, align 4
  store %struct.lpc32xx_udc* %0, %struct.lpc32xx_udc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = shl i32 1, %5
  %7 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %3, align 8
  %8 = getelementptr inbounds %struct.lpc32xx_udc, %struct.lpc32xx_udc* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %3, align 8
  %12 = getelementptr inbounds %struct.lpc32xx_udc, %struct.lpc32xx_udc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.lpc32xx_udc*, %struct.lpc32xx_udc** %3, align 8
  %15 = getelementptr inbounds %struct.lpc32xx_udc, %struct.lpc32xx_udc* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @USBD_EPINTEN(i32 %16)
  %18 = call i32 @writel(i32 %13, i32 %17)
  ret void
}

declare dso_local i32 @writel(i32, i32) #1

declare dso_local i32 @USBD_EPINTEN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
